src/test/deca/context/valid/personal/class_declaration.deca
// Description:
//    test minimaliste pour testé le pass 1
//
// Resultats:
//
//
//
// Historique:
//    cree le 14/01/2025

class A{
   
}

class B extends A{

}

class C extends B{

}
