src/test/deca/context/invalid/class_pass1_3.deca
// Description:
//    test minimaliste pour induire a l erreur lors du pass 1
//
// Resultats:
// erreur
//
//
// Historique:
//    cree le 14/01/2025



class B {

}
class B {
    
}
